@@ -10,7 +10,7 @@
       <bugs-xmlrpc>http://bugzilla-test.gnome.org/xmlrpc.cgi</bugs-xmlrpc>
       <bugs-baseurl>http://bugzilla.gnome.org/</bugs-baseurl>
       <bugs-product>%(module/id)</bugs-product>
-      <bugs-component>generayel</bugs-component>
+      <bugs-component>general</bugs-component>
       <scmroot type="svn">
         <path>http://svn.gnome.org/svn</path>
       </scmroot>
@@ -426,7 +426,7 @@
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
     <branch id="gnome-2-18" stringfrozen="true"/>
-    <branch id="gnome-2-20" stringforzen="true"/>
+    <branch id="gnome-2-20" stringfrozen="true"/>
   </module>
 
   <module id="evolution-xmltv">
@@ -510,7 +510,7 @@
     <branch id="HEAD" stringfrozen="false"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-18" stringfrozen="true"/>
-    <branch id="gnome-2-20" stringforzen="true"/>
+    <branch id="gnome-2-20" stringfrozen="true"/>
     <branch id="gnome-2-22" stringfrozen="true"/>
   </module>
 
