@@ -1,3 +1,10 @@
+2008-07-25  Gil Forcada  <gforcada@gnome.org>
+
+	* gnome-modules.xml.in: Fixed some miss spellings found by Asgeir
+	Frimannsson.
+	* releases.xml.in: Fixed pessulus name, and commented some non-working
+	modules.
+
 2008-07-25  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in: Fixed xkeyboard-config definition.
